--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,26 +4,13 @@ project(KetchupHouse CXX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(FRAMEWORK_FILES
-    framework/control/AbstractControl.h
-    framework/control/Stack.cpp
+    framework/control/AbstractControl.cpp
     main.cpp)
 
 set(SOURCE_FILES
-    app/Config.h
-    app/control/Control.cpp
-    app/control/Control.h
-    app/api/Engine.cpp app/api/Engine.h
-    app/grid/Position.cpp
-    app/grid/Position.h
-    app/threads/ControlThread.h
-    app/threads/LogicThread.h
-    framework/structures/Coordinate.h
-    framework/structures/Instruction.h
-    app/structures/SensorsArray.h
+    app/api/Engine.cpp
     app/threads/sensors/EncoderSensor.cpp
-    app/threads/sensors/EncoderSensor.h
-    app/threads/controls/EngineControl.cpp
-    app/threads/controls/EngineStack.h)
+    app/threads/controls/EngineControl.cpp)
 
 
 add_executable(KetchupHouse ${FRAMEWORK_FILES} ${SOURCE_FILES})
