--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,22 @@
-cmake_minimum_required(VERSION 3.2)
+cmake_minimum_required(VERSION 2.8)
 project(KetchupHouse CXX)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_SYSTEM_NAME Linux)
+set(CMAKE_SYSTEM_PROCESSOR arm)
+
+if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+	SET(CMAKE_CXX_COMPILER arm-linux-gnueabi-g++)
+elseif ((NOT ${CMAKE_SYSTEM_NAME} MATCHES "OSX"))
+	SET(CMAKE_CXX_COMPILER /Volumes/ARM-LINUX/arm-unknown-linux-gnueabi/bin/arm-unknown-linux-gnueabi-g++)
+endif ()
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -pthread")
 
 set(FRAMEWORK_FILES
-    main.cpp)
+    )
 
 set(SOURCE_FILES
-    app/Config.h
-    app/control/Control.cpp
-    app/control/Control.h
-    app/api/Engine.cpp app/api/Engine.h
-    app/grid/Position.cpp
-    app/grid/Position.h
-    app/threads/ControlThread.h
-    app/threads/LogicThread.h
-    app/structures/Coordinates.h
-    app/structures/Instruction.h
-    app/structures/SensorsArray.h
-    app/threads/sensors/EncoderSensor.cpp
-    app/threads/sensors/EncoderSensor.h)
-
+    )
 
 add_executable(KetchupHouse ${FRAMEWORK_FILES} ${SOURCE_FILES})
 
