Cross compile fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ language: cpp
 #Before compile
 before_install:
   - sudo apt-get update
-  - sudo apt-get install gcc-arm-linux-gnueabi
-  - sudo apt-get install g++-arm-linux-gnueabi
+  - sudo apt-get install -y gcc-arm-linux-gnueabi
+  - sudo apt-get install -y g++-arm-linux-gnueabi
 
 # Build steps
 script:
