--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SOURCE_FILES
 
     app/hardware/encoder/Encoder.cpp
     app/hardware/motor/Motor.cpp
+    app/hardware/motor/Motor.h
     app/hardware/button/Button.cpp
     app/hardware/ultrasonicSensor/UltrasonicSensor.cpp
 
