--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,10 @@ set(FRAMEWORK_FILES
     framework/controller/CoordinateController.cpp
     framework/threading/Threading.cpp
     framework/stopWatch/StopWatch.h
+    framework/structures/Coordinate.h
     app/threads/controller/Controller.cpp
-    app/threads/logic/Logic.cpp)
+    app/threads/logic/Logic.cpp
+    )
 
 set(SOURCE_FILES
     app/hardware/ev3dev.cpp
@@ -36,13 +38,14 @@ set(SOURCE_FILES
     app/hardware/diode/Diode.cpp
     app/hardware/button/Button.cpp
     app/hardware/ultrasonicSensor/Ultrasonic.cpp
+    app/hardware/reflectiveBar/ReflectiveBar.cpp
 
     app/model/ultrasonic/UltrasonicModel.cpp
     app/model/encoder/EncodersModel.cpp
     app/model/line/LineModel.cpp
 
     app/model/button/ButtonsModel.cpp
-    app/threads/logic/Logic.cpp framework/hardware/IReflectiveBar.h)
+    app/threads/logic/Logic.cpp framework/hardware/IReflectiveBar.h app/model/ReflectiveBars/ReflectiveModel.cpp app/model/ReflectiveBars/ReflectiveModel.h)
 
 add_executable(KetchupHouse ${FRAMEWORK_FILES} ${SOURCE_FILES})
 
